updates to optimizationHoursLog

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <script defer src="browserOptimizationHoursLog.js"></script>
     </head>
     <body>
-        <h1>Browser (NOT NIAGARA) Testing :)</h1>
+        <div id="outer">
+
+        </div>
+        <!-- <h1>Browser (NOT NIAGARA) Testing :)</h1> -->
     </body>
 </html>
