created templates and added older widgets

--- a/index.html
+++ b/index.html
@@ -3,14 +3,11 @@
     <head>
         <meta charset='utf-8'>
         <title>Browser Testing</title>
-        <link rel="stylesheet" type="text/css" href="optimizationHoursLogStyle.css">
+        <!-- <link rel="stylesheet" type="text/css" href="optimizationHoursLogStyle.css"> -->
         <script src="d3.v4.js"></script>
-        <script defer src="browserOptimizationHoursLog.js"></script>
+        <script defer src="button/browser_button.js"></script>
     </head>
     <body>
-        <div id="outer">
-
-        </div>
-        <!-- <h1>Browser (NOT NIAGARA) Testing :)</h1> -->
+        <div id="outer" />
     </body>
 </html>
