--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <title>Browser Testing</title>
         <!-- <link rel="stylesheet" type="text/css" href="optimizationHoursLogStyle.css"> -->
         <script src="d3.v4.js"></script>
-        <script defer src="button/browser_button.js"></script>
+        <script defer src="utilitySavingsTool/fakeUtilitySavingsToolData.js"></script>
+        <script defer src="utilitySavingsTool/tester.js"></script>
+        <!-- <script defer src="utilitySavingsTool/browser_utilitySavingsTool.js"></script> -->
     </head>
     <body>
         <div id="outer" />
