kwh animations functioning properly and ticks rendering at nice intervals

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='utf-8'>
         <title>Browser Testing</title>
-        <!-- <link rel="stylesheet" type="text/css" href="optimizationHoursLogStyle.css"> -->
+        <link rel="stylesheet" type="text/css" href="utilitySavingsTool/utilitySavingsToolStyle.css">
         <script src="d3.v4.js"></script>
         <script defer src="utilitySavingsTool/fakeUtilitySavingsToolData.js"></script>
         <script defer src="utilitySavingsTool/tester.js"></script>
