new gauge styling updated

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset='utf-8'>
         <title>Browser Testing</title>
-        <link rel="stylesheet" type="text/css" href="utilitySavingsTool/utilitySavingsToolStyle.css">
+        <!-- <link rel="stylesheet" type="text/css" href="utilitySavingsTool/utilitySavingsToolStyle.css"> -->
         <script src="d3.v4.js"></script>
-        <script defer src="utilitySavingsTool/fakeUtilitySavingsToolData.js"></script>
-        <!-- <script defer src="utilitySavingsTool/tester.js"></script> -->
-        <script defer src="utilitySavingsTool/browser_utilitySavingsTool.js"></script>
+        <!-- <script defer src="utilitySavingsTool/fakeUtilitySavingsToolData.js"></script>
+        <script defer src="utilitySavingsTool/browser_utilitySavingsTool.js"></script> -->
+        <script defer src="modernGauge/browser_modernGauge.js"></script>
     </head>
-    <body>
+    <body style=background-color:gray>
         <div id="outer" />
     </body>
 </html>
