--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <script src="d3.v4.js"></script>
         <!-- <script defer src="utilitySavingsTool/fakeUtilitySavingsToolData.js"></script>
         <script defer src="utilitySavingsTool/browser_utilitySavingsTool.js"></script> -->
-        <script defer src="modernEfficiencyGraph/browser_effGraph_minY.js"></script>
+        <!-- <script defer src="modernEfficiencyGraph/browser_effGraph_minY.js"></script> -->
+        <script defer src="5heatMap/fakeData_heatMap.js"></script>
+        <script defer src="5heatMap/browser_heatMap.js"></script>
     </head>
     <body style=background-color:gray>
         <div id="outer" />
