--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='utf-8'>
         <title>Browser Testing</title>
-        <!-- <link rel="stylesheet" type="text/css" href="utilitySavingsTool/utilitySavingsToolStyle.css"> -->
+        <link rel="stylesheet" type="text/css" href="4utilitySavingsTool/utilitySavingsToolStyle.css">
         <script src="d3.v4.js"></script>
         <script defer src="4utilitySavingsTool/fakeUtilitySavingsToolData.js"></script>
         <script defer src="4utilitySavingsTool/browser_utilitySavingsTool.js"></script>
