--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset='utf-8'>
         <title>Browser Testing</title>
-        <link rel="stylesheet" type="text/css" href="4utilitySavingsTool/utilitySavingsToolStyle.css">
+        <!-- <link rel="stylesheet" type="text/css" href="4utilitySavingsTool/utilitySavingsToolStyle.css"> -->
         <script src="d3.v4.js"></script>
-        <script defer src="4utilitySavingsTool/fakeUtilitySavingsToolData.js"></script>
-        <script defer src="4utilitySavingsTool/browser_utilitySavingsTool.js"></script>
+        <!-- <script defer src="4utilitySavingsTool/fakeUtilitySavingsToolData.js"></script>
+        <script defer src="4utilitySavingsTool/browser_utilitySavingsTool.js"></script> -->
         <!-- <script defer src="2modernEfficiencyGraph/browser_modernEfficiencyGraph.js"></script> -->
-        <!-- <script defer src="5heatMap/fakeData_heatMap.js"></script>
-        <script defer src="5heatMap/browser_heatMap.js"></script> -->
+        <script defer src="5heatMap/fakeData_heatMap.js"></script>
+        <script defer src="5heatMap/browser_heatMap.js"></script>
     </head>
     <body style=background-color:gray>
         <div id="outer" />
