created custom dropdown

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <!-- <script defer src="2modernEfficiencyGraph/browser_modernEfficiencyGraph.js"></script> -->
         <script defer src="5heatMap/fakeData_heatMap.js"></script>
         <script defer src="5heatMap/browser_heatMap.js"></script>
+        <!-- <script defer src="dropdown.js"></script> -->
     </head>
     <body style=background-color:gray>
         <div id="outer" />
