fixed rates for ust

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <!-- <script defer src="5heatMap/fakeData_heatMap.js"></script>
         <script defer src="5heatMap/browser_heatMap.js"></script> -->
         <!-- <script defer src="dropdown.js"></script> -->
-        <script defer src="3optimizationHoursLog\browser_optimizationHoursLog.js"></script>
+        <!-- <script defer src="3optimizationHoursLog/browser_optimizationHoursLog.js"></script> -->
+        <script defer src="1Gauge/newBrowser_gauge.js"></script>
     </head>
     <body style=background-color:gray>
         <div id="outer" />
