--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
         <script src="d3.v4.js"></script>
         <!-- <script defer src="4utilitySavingsTool/fakeUtilitySavingsToolData.js"></script>
         <script defer src="4utilitySavingsTool/browser_utilitySavingsTool.js"></script> -->
-        <!-- <script defer src="2modernEfficiencyGraph/browser_modernEfficiencyGraph.js"></script> -->
-        <script defer src="5EfficiencyMap/fakeData_heatMap.js"></script>
-        <script defer src="5EfficiencyMap/browser_heatMap.js"></script>
+        <!-- <script defer src="2YearlyEfficiencyProfile/browser_modernEfficiencyGraph.js"></script> -->
+        <!-- <script defer src="5EfficiencyMap/fakeData_heatMap.js"></script>
+        <script defer src="5EfficiencyMap/browser_heatMap.js"></script> -->
         <!-- <script defer src="dropdown.js"></script> -->
-        <!-- <script defer src="3optimizationHoursLog/browser_optimizationHoursLog.js"></script> -->
+        <script defer src="3optimizationHoursLog/browser_optimizationHoursLog.js"></script>
         <!-- <script defer src="1Gauge/newBrowser_gauge.js"></script> -->
         <!-- <script defer src="6CarbonSavings\browser_CarbonSavings.js"></script> -->
     </head>
