base64 image string fixed and testing removed

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset='utf-8'>
-        <title>Browser Testing</title>
+        <title>Energy Dashboard Testing</title>
         <!-- <link rel="stylesheet" type="text/css" href="4utilitySavingsTool/utilitySavingsToolStyle.css"> -->
         <script src="d3.v4.js"></script>
         <!-- <script defer src="4utilitySavingsTool/fakeUtilitySavingsToolData.js"></script>
