--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Energy Dashboard Testing</title>
         <!-- <link rel="stylesheet" type="text/css" href="4utilitySavingsTool/utilitySavingsToolStyle.css"> -->
         <script src="d3.v4.js"></script>
+        <!-- <script defer src="classes/TekWorxColors.js"></script> -->
         <!-- <script defer src="4utilitySavingsTool/fakeUtilitySavingsToolData.js"></script>
         <script defer src="4utilitySavingsTool/browser_utilitySavingsTool.js"></script> -->
         <!-- <script defer src="2YearlyEfficiencyProfile/browser_modernEfficiencyGraph.js"></script> -->
